issue #11 removed overflow of columns footer

--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -29,29 +29,21 @@
       }
       &:nth-child(2) {
         margin-right: 3.5625rem;
-        .footer__li {
-          min-width: 8.9375rem;
-        }
+        min-width: 8.9375rem;
       }
       &:nth-child(3) {
-        white-space: nowrap;
         margin-right: 5.75rem;
-        .footer__li {
-          min-width: 6.75rem;
-        }
+        min-width: 6.75rem;
       }
       &:nth-child(4) {
         margin-right: 3.18rem;
-        .footer__li {
-          min-width: 9.3125rem;
-        }
+        min-width: 9.3125rem;
       }
       &:nth-child(5) {
         max-width: 16.25rem;
         margin-right: 0;
         .footer__li:first-child {
           margin-bottom: 1.2rem;
-          
         }
         .footer__li:nth-child(2) {
           line-height: 1.5rem;
@@ -67,7 +59,6 @@
     }
     &__li {
       margin-bottom: 1.1875rem;
-      
       &:first-child {
         font-weight: bold;
         text-transform: uppercase;
